[metadata]
name = aws-orga-deployer
version = 0.1.0
author = Nicolas Malaval
author_email = malavaln@gmail.com
description = Deploy infrastructure-as-code at the scale of an AWS organization
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/malaval/aws-orga-deployer/
project_urls =
    Documentation = https://malaval.github.io/aws-orga-deployer/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    boto3
    pyyaml
    networkx
    jsonschema

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    black
    isort
    isort[pyproject]
    mypy
    pylint
    pytest
    types-jsonschema
    moto[server,cloudformation,organizations,s3,ssm,sts]

[options.entry_points]
console_scripts =
    aws-orga-deployer = aws_orga_deployer.main:main
